// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with marginRight if not last in the row 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "marginRight": 5,
        "width": 10,
      }
    }
  />
</View>
`;

exports[`renders without marginRight if last in the row 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "width": 10,
      }
    }
  />
</View>
`;
